# num8

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NUM8_DLL_API.md  README.md  Specification.md  Specification_Performance.md  num8.c  num8.h  num8_bench.c  num8_builder.c  num8_minitest.c  num8_selftest.c
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/wiki/: API-Reference.md  FAQ.md  File-Format.md  Getting-Started.md  Home.md  Performance.md  Troubleshooting.md  _Sidebar.md
.github/workflows/: ci.yml
